encoding/jsonschema/testdata/txtar/required_nonstring.txtar
#noverify

Regression test for a nil pointer dereference in constraintRequired when the
"required" array contains a non-string element. See https://cuelang.org/issue/4418.

-- schema.json --
{
	"type": "object",
	"required": [123]
}
-- out/decode/extract --
ERROR:
invalid string:
    schema.json:3:15
